--- a/public/profile.html
+++ b/public/profile.html
@@ -17,18 +17,18 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
 
-        const username = document.querySelector('#username')
-        const email = document.querySelector('#email')
-        const token = localStorage.getItem('token')
-        const logout = document.querySelector('#logout')
+        const username = document.querySelector('#username');
+        const email = document.querySelector('#email');
+        const token = localStorage.getItem('token');
+        const logout = document.querySelector('#logout');
 
         if (!token) {
-            window.location.href = "/login"
+            window.location.href = '/login';
         }
 
         logout.addEventListener('click', () => {
-            localStorage.removeItem('token')
-            window.location.href = "/login"
+            localStorage.removeItem('token');
+            window.location.href = '/login';
         })
 
         axios.get('/api/v1/users/profile', {
